--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,6 @@
 	<title></title>
 </head>
 <body>
-<h1>Hello World. This is another test.</h1>
+<h1>This is the sign up page.</h1>
 </body>
 </html>
