--- a/public/index.html
+++ b/public/index.html
@@ -5,5 +5,10 @@
 </head>
 <body>
 <h1>This is the sign up page.</h1>
+
+
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
