added paragraph placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -2,10 +2,16 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
-<h1>This is the sign up page.</h1>
+	<header>
+		<h1 id="title-header">Dream Walker</h1>
+	</header>
 
+	<main>
+		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam iaculis sem non vulputate vestibulum. Aliquam varius orci ac nisi auctor malesuada. Integer congue condimentum diam in molestie. Nullam sit amet interdum neque. Suspendisse placerat egestas metus malesuada volutpat. Integer nibh velit, convallis nec nunc vitae, dapibus convallis est. Integer leo ipsum, sodales ut tortor ac, convallis vestibulum mi. Integer facilisis et felis quis cursus. Phasellus in commodo arcu. Pellentesque velit ipsum, consequat ac gravida sed, elementum ut lacus. Proin a vehicula massa, fringilla malesuada dolor. Ut pharetra neque quis justo accumsan, quis iaculis est tristique. Proin vehicula ex eleifend nisi tincidunt ultricies.</p>
+	</main>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
