--- a/public/index.html
+++ b/public/index.html
@@ -4,14 +4,29 @@
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="grid.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
 	<nav>
-		
+		<div class="row">
+			<div class="col-12">
+				<ul id="nav-list">
+					<li><h4 id="nav-logo"><a href="#">DREAM WALKER</a></h4></li>
+					<li><a href="#">About</a></li>
+					<li><a href="#">Analyze</a></li>
+					<li><a href="#">Sign Up</a></li>
+				</ul>
+			</div>
+		</div>
 	</nav>
+
 	<header>
-		<h1 id="title">DREAM WALKER</h1>
+		<div class="row">
+			<div class="col-12">
+				<h1 id="title">DREAM WALKER</h1>
+			</div>
+		</div>
 	</header>
 
 	<main>
