--- a/public/index.html
+++ b/public/index.html
@@ -10,12 +10,15 @@
 <body>
 	<nav>
 		<div class="row">
-			<div class="col-12">
-				<ul id="nav-list">
-					<li><h4 id="nav-logo"><a href="#">DREAM WALKER</a></h4></li>
+			<div class="col-12 navbar">
+				<ul>
+					<li><h4 id="nav-brand"><a href="#">DREAM WALKER</a></h4></li>
 					<li><a href="#">About</a></li>
+					<li><a href="#">Journal</a></li>
 					<li><a href="#">Analyze</a></li>
 					<li><a href="#">Sign Up</a></li>
+					<li class="nav-right"><a href="#" id="demo-button">VIEW DEMO</a></li>
+					<li class="nav-right"><a href="#">Log In</a></li>
 				</ul>
 			</div>
 		</div>
@@ -25,6 +28,7 @@
 		<div class="row">
 			<div class="col-12">
 				<h1 id="title">DREAM WALKER</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget ipsum sed eros congue placerat. Curabitur lobortis, magna non rhoncus aliquam, sapien eros lobortis justo, eget auctor nibh est non erat.</p>
 			</div>
 		</div>
 	</header>
