--- a/public/index.html
+++ b/public/index.html
@@ -25,6 +25,12 @@
 	</nav>
 
 	<header>
+		<!--Parallax Star Background-->
+		<div id='stars'></div>
+		<div id='stars2'></div>
+		<div id='stars3'></div>
+		<!--Parallax Star Background-->
+
 		<div class="row">
 			<div class="col-12">
 				<h1 id="title">DREAM WALKER</h1>
@@ -34,13 +40,61 @@
 	</header>
 
 	<main>
+		<section>
+		<div id="about">
+			<div class="row">
+				<div class="col-12">
+					<h2>What is Dream Walker?</h2>
+					<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
 
-		<div id='stars'></div>
-		<div id='stars2'></div>
-		<div id='stars3'></div>
+					Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
+				</div>
+			</div>
+		</div>
+		</section>
+
+		<section>
+		<div id="journal">
+			<div class="row">
+				<div class="col-12">
+					<h2>Record Your Dreams</h2>
+					<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
+
+					Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
+				</div>
+			</div>
+		</div>
+		</section>
+
+		<section>
+		<div id="analyze">
+			<div class="row">
+				<div class="col-12">
+					<h2>Analyze Your Dreams</h2>
+					<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
+
+					Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
+				</div>
+			</div>
+		</div>
+		</section>
+
+		<section>
+		<div id="sign-up">
+			<div class="row">
+				<div class="col-12">
+					<h2>Sign Up</h2>
+					<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
+
+					Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
+				</div>
+			</div>
+		</div>
+		</section>
+
+
 
 		
-
 	</main>
 
 
