edited anchor links for smooth scroll

--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,11 @@
 		<div class="row">
 			<div class="col-12 navbar">
 				<ul>
-					<li><h4 id="nav-brand"><a href="#">DREAM WALKER</a></h4></li>
-					<li><a href="#">About</a></li>
-					<li><a href="#">Journal</a></li>
-					<li><a href="#">Analyze</a></li>
-					<li><a href="#">Sign Up</a></li>
+					<li><h4 id="nav-brand"><a href="#top">DREAM WALKER</a></h4></li>
+					<li><a href="#about">About</a></li>
+					<li><a href="#journal">Journal</a></li>
+					<li><a href="#analyze">Analyze</a></li>
+					<li><a href="#sign-up">Sign Up</a></li>
 					<li class="nav-right"><a href="#" id="demo-button">VIEW DEMO</a></li>
 					<li class="nav-right"><a href="#">Log In</a></li>
 				</ul>
