--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 		<div class="row">
 			<div class="col-12 navbar">
 				<ul>
-					<li><h4 id="nav-brand"><a href="#top">DREAM WALKER</a></h4></li>
+					<li><h4 id="nav-brand"><a href="#">DREAM WALKER</a></h4></li>
 					<li><a href="#about">About</a></li>
 					<li><a href="#journal">Journal</a></li>
 					<li><a href="#analyze">Analyze</a></li>
