put main title in home div

--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="main.css">
 </head>
 <body>
+
 	<nav>
 		<div class="row">
 			<div class="col-12 navbar">
@@ -30,13 +31,15 @@
 		<div id='stars2'></div>
 		<div id='stars3'></div>
 		<!--Parallax Star Background-->
-
-		<div class="row">
-			<div class="col-12">
-				<h1 id="title">DREAM WALKER</h1>
-				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget ipsum sed eros congue placerat. Curabitur lobortis, magna non rhoncus aliquam, sapien eros lobortis justo, eget auctor nibh est non erat.</p>
+		<div id="home">
+			<div class="row">
+				<div class="col-12">
+					<h1 id="title">DREAM WALKER</h1>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget ipsum sed eros congue placerat. Curabitur lobortis, magna non rhoncus aliquam, sapien eros lobortis justo, eget auctor nibh est non erat.</p>
+				</div>
 			</div>
 		</div>
+		
 	</header>
 
 	<main>
