--- a/public/index.html
+++ b/public/index.html
@@ -6,23 +6,21 @@
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="grid.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 </head>
 <body>
 
-	<nav>
-		<div class="row">
-			<div class="col-12 navbar">
-				<ul>
-					<li class="nav-left"><h4 id="nav-brand"><a href="#">DREAM WALKER</a></h4></li>
-					<li class="nav-left"><a href="#about">About</a></li>
-					<li class="nav-left"><a href="#journal">Journal</a></li>
-					<li class="nav-left"><a href="#analyze">Analyze</a></li>
-					<li class="nav-left"><a href="#sign-up">Sign Up</a></li>
-					<li class="nav-right"><a href="#" id="demo-button">VIEW DEMO</a></li>
-					<li class="nav-right"><a href="#">Log In</a></li>
-				</ul>
-			</div>
-		</div>
+	<nav>		
+		<ul>
+			<a href="#"><li>DREAM WALKER</li></a>
+			<a href="#"><li>About</li></a>
+			<a href="#"><li>Journal</li></a>
+			<a href="#"><li>Analyze</li></a>
+			<a href="#"><li>Sign Up</li></a>
+			<a href="#"><li>Log In</li></a>
+			<a href="#"><li>View Demo</li></a>
+		</ul>
+		<div class="handle">Menu</div>
 	</nav>
 
 	<header>
