added class to nav li

--- a/public/index.html
+++ b/public/index.html
@@ -12,15 +12,15 @@
 
 	<nav>		
 		<ul>
-			<a href="#"><li>DREAM WALKER</li></a>
-			<a href="#"><li>About</li></a>
-			<a href="#"><li>Journal</li></a>
-			<a href="#"><li>Analyze</li></a>
-			<a href="#"><li>Sign Up</li></a>
-			<a href="#"><li>Log In</li></a>
-			<a href="#"><li>View Demo</li></a>
+			<a href="#"><li class="nav-left"><span class="nav-brand">DREAM WALKER</span></li></a>
+			<a href="#"><li class="nav-left">About</li></a>
+			<a href="#"><li class="nav-left">Journal</li></a>
+			<a href="#"><li class="nav-left">Analyze</li></a>
+			<a href="#"><li class="nav-left">Sign Up</li></a>
+			<a href="#"><li class="nav-right">Log In</li></a>
+			<a href="#"><li class="nav-right">View Demo</li></a>
 		</ul>
-		<div class="handle">Menu</div>
+		<div class="handle">Menu <i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
 	</nav>
 
 	<header>
