added span class to handle menu

--- a/public/index.html
+++ b/public/index.html
@@ -13,14 +13,14 @@
 	<nav>		
 		<ul>
 			<a href="#"><li class="nav-left"><span class="nav-brand">DREAM WALKER</span></li></a>
-			<a href="#"><li class="nav-left">About</li></a>
-			<a href="#"><li class="nav-left">Journal</li></a>
-			<a href="#"><li class="nav-left">Analyze</li></a>
-			<a href="#"><li class="nav-left">Sign Up</li></a>
-			<a href="#"><li class="nav-right">Log In</li></a>
-			<a href="#"><li class="nav-right">View Demo</li></a>
+			<a href="#"><li class="nav-left nav-hover">About</li></a>
+			<a href="#"><li class="nav-left nav-hover">Journal</li></a>
+			<a href="#"><li class="nav-left nav-hover">Analyze</li></a>
+			<a href="#"><li class="nav-left nav-hover">Sign Up</li></a>
+			<a href="#"><li class="nav-right nav-hover">Log In</li></a>
+			<a href="#"><li class="nav-right nav-hover">View Demo</li></a>
 		</ul>
-		<div class="handle">Menu <i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
+		<div class="handle"><span class="handle-menu">Menu</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
 	</nav>
 
 	<header>
