added view demo button

--- a/public/index.html
+++ b/public/index.html
@@ -18,7 +18,7 @@
 			<a href="#"><li class="nav-left nav-hover">Analyze</li></a>
 			<a href="#"><li class="nav-left nav-hover">Sign Up</li></a>
 			<a href="#"><li class="nav-right nav-hover">Log In</li></a>
-			<a href="#"><li class="nav-right nav-hover">View Demo</li></a>
+			<a href="#"><li class="nav-right nav-hover" id="demo-button">View Demo</li></a>
 		</ul>
 		<div class="handle"><span class="handle-menu">Menu</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
 	</nav>
