uncommented first div placeholder

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 	<nav>		
 		<ul>
 			<a href="#"><li class="nav-left"><span class="nav-brand">DREAM WALKER</span></li></a>
-			<a href="#"><li class="nav-left nav-hover">About</li></a>
+			<a href="#about"><li class="nav-left nav-hover">About</li></a>
 			<a href="#"><li class="nav-left nav-hover">Journal</li></a>
 			<a href="#"><li class="nav-left nav-hover">Analyze</li></a>
 			<a href="#"><li class="nav-left nav-hover">Sign Up</li></a>
@@ -36,10 +36,9 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget ipsum sed eros congue placerat. Curabitur lobortis, magna non rhoncus aliquam, sapien eros lobortis justo, eget auctor nibh est non erat.</p>
 				</div>
 			</div>
-		</div>
-		
+		</div>		
 	</header>
-<!--
+
 	<main>
 		<section>
 		<div id="about">
@@ -53,6 +52,8 @@
 			</div>
 		</div>
 		</section>
+
+<!--
 
 		<section>
 		<div id="journal">
