uncommented all placeholder divs

--- a/public/index.html
+++ b/public/index.html
@@ -14,9 +14,9 @@
 		<ul>
 			<a href="#"><li class="nav-left"><span class="nav-brand">DREAM WALKER</span></li></a>
 			<a href="#about"><li class="nav-left nav-hover">About</li></a>
-			<a href="#"><li class="nav-left nav-hover">Journal</li></a>
-			<a href="#"><li class="nav-left nav-hover">Analyze</li></a>
-			<a href="#"><li class="nav-left nav-hover">Sign Up</li></a>
+			<a href="#journal"><li class="nav-left nav-hover">Journal</li></a>
+			<a href="#analyze"><li class="nav-left nav-hover">Analyze</li></a>
+			<a href="#sign-up"><li class="nav-left nav-hover">Sign Up</li></a>
 			<a href="#"><li class="nav-right nav-hover">Log In</li></a>
 			<a href="#"><li class="nav-right nav-hover" id="demo-button">View Demo</li></a>
 		</ul>
@@ -52,8 +52,6 @@
 			</div>
 		</div>
 		</section>
-
-<!--
 
 		<section>
 		<div id="journal">
@@ -98,7 +96,7 @@
 
 		
 	</main>
--->
+
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
