--- a/public/users.html
+++ b/public/users.html
@@ -4,7 +4,7 @@
 	<title></title>
 </head>
 <body>
-<h1>This is the dashboard.</h1>
+<h1>This is the user's dashboard.</h1>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
