--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
 			<a href="#"><li class="nav-right nav-hover">Log In</li></a>
 			<a href="#"><li class="nav-right nav-hover" id="demo-button">View Demo</li></a>
 		</ul>
-		<div class="handle"><span class="handle-menu">Menu</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
+		<div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
 	</nav>
 
 	<header>
