--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
-	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link href="https://fonts.googleapis.com/css?family=Raleway|Roboto" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="grid.css">
 	<link rel="stylesheet" type="text/css" href="main.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
@@ -45,7 +45,7 @@
 			<div id="about">
 				<div class="row">
 					<div class="col-12">
-						<h2>What is Dream Walker?</h2>
+						<h3>What is Dream Walker?</h3>
 						<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
 
 						Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
@@ -58,7 +58,7 @@
 			<div id="journal">
 				<div class="row">
 					<div class="col-12">
-						<h2>Record Your Dreams</h2>
+						<h3>Record Your Dreams</h3>
 						<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
 
 						Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
@@ -71,7 +71,7 @@
 			<div id="analyze">
 				<div class="row">
 					<div class="col-12">
-						<h2>Analyze Your Dreams</h2>
+						<h3>Analyze Your Dreams</h3>
 						<p>Dream Walker is Phasellus eu feugiat velit. Integer id ultricies ex. Nullam imperdiet tincidunt porttitor. Phasellus id felis eget massa placerat tincidunt. Donec convallis porta diam, at consectetur mi sollicitudin at. Cras fermentum, dui a accumsan pulvinar, diam ante dignissim erat, vel consequat nibh magna sed lectus. Duis eu porta arcu. Mauris faucibus ex vitae metus dapibus varius.
 
 						Ut mollis orci ullamcorper tortor luctus laoreet. Aenean porta nisl at est pharetra, sed ultrices turpis varius. Suspendisse lectus diam, vestibulum in dictum a, laoreet in ligula. Nunc lorem sapien, hendrerit ac neque non, mollis convallis diam. Nullam eu sollicitudin enim. Pellentesque rutrum nisl tellus, in rhoncus sem commodo vitae. Vestibulum placerat dignissim dolor ut tincidunt.</p>
@@ -84,10 +84,10 @@
 			<div id="sign-up">
 				<div class="row">
 					<div class="col-12">
-						<h2>Become A Dream Walker</h2>
+						<h3>Become A Dream Walker</h3>
 						<div class="sign-up-box">
-							<form class="register" action="/signup/" method="post">
-								<fieldset name="login-info">
+							<form class="register" action="/some-server-endpoint" method="post">
+								<fieldset name="register-info">
 									<input type="text" name="username" id="username" placeholder="Username" required/>
 									<input type="password" name="password" id="password" placeholder="Password" required/>
 								</fieldset>
