added autocomplete=off for input

--- a/public/index.html
+++ b/public/index.html
@@ -86,7 +86,7 @@
 					<div class="col-12">
 						<h3>Become A Dream Walker</h3>
 						<div class="sign-up-box">
-							<form class="register" action="/some-server-endpoint" method="post">
+							<form class="register" action="/some-server-endpoint" method="post" autocomplete="off">
 								<fieldset name="register-info">
 									<input type="text" name="username" id="username" placeholder="Username" required/>
 									<input type="password" name="password" id="password" placeholder="Password" required/>
