changed tab size to 2

--- a/public/index.html
+++ b/public/index.html
@@ -82,7 +82,7 @@
 
 		<section>
 			<div id="sign-up">
-				<div class="row">
+				<div class="row test">
 					<div class="col-12">
 						<h2>Become A Dream Walker</h2>
 						<div class="sign-up-box">
@@ -97,11 +97,7 @@
 					</div>
 				</div>
 			</div>
-		</section>
-
-
-
-		
+		</section>		
 	</main>
 
 
