added class to sign up button

--- a/public/index.html
+++ b/public/index.html
@@ -80,6 +80,7 @@
 			</div>
 		</section>
 
+
 		<section>
 			<div id="sign-up">
 				<div class="row test">
@@ -91,13 +92,15 @@
 									<input type="text" name="username" id="username" placeholder="Username" required/>
 									<input type="password" name="password" id="password" placeholder="Password" required/>
 								</fieldset>
-								<button type='submit'>Sign Up</button>
+								<button type='submit' class="sign-up-button">Sign Up</button>
 							</form>
 						</div>
 					</div>
 				</div>
 			</div>
-		</section>		
+		</section>	
+
+
 	</main>
 
 
