remove test class

--- a/public/index.html
+++ b/public/index.html
@@ -83,7 +83,7 @@
 
 		<section>
 			<div id="sign-up">
-				<div class="row test">
+				<div class="row">
 					<div class="col-12">
 						<h2>Become A Dream Walker</h2>
 						<div class="sign-up-box">
