added popup login modal

--- a/public/index.html
+++ b/public/index.html
@@ -18,11 +18,18 @@
 			<a href="#journal"><li class="nav-left nav-hover">Journal</li></a>
 			<a href="#analyze"><li class="nav-left nav-hover">Analyze</li></a>
 			<a href="#sign-up"><li class="nav-left nav-hover">Sign Up</li></a>
-			<a href="#"><li class="nav-right nav-hover">Log In</li></a>
+			<a href="#log-in"><li class="nav-right nav-hover">Log In</li></a>
 			<a href="#"><li class="nav-right nav-hover" id="demo-button">View Demo</li></a>
 		</ul>
 		<div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
 	</nav>
+
+	<div class="modal" id="log-in">
+		<div class="modal-container">
+			<p>test test test</p>
+			<a href="#">Close</a>
+		</div>
+	</div>
 
 	<header>
 		<!--Parallax Star Background-->
