switched modal close link to button

--- a/public/index.html
+++ b/public/index.html
@@ -26,12 +26,14 @@
 		<div class="modal" id="log-in">
 			<div class="modal-container">
 				<p>test test test</p>
-				<a href="#">Close</a>
+				<button type="button" class="modal-close">Close</button>
+
+		<!--		<a href="#">Close</a> -->
 			</div>
 		</div>
 
 	</nav>
-	
+
 	<header>
 		<!--Parallax Star Background-->
 		<div id='stars'></div>
