--- a/public/dreams.html
+++ b/public/dreams.html
@@ -2,9 +2,22 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
+	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+	<link rel="stylesheet" type="text/css" href="grid.css">
+	<link rel="stylesheet" type="text/css" href="dreams.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
-<h1>This is the dreams page.</h1>
+	<nav>
+		<h1>Navigation</h1>
+	</nav>
+
+	<div class="row">
+		<div class="col-12">
+			<div class="main-container">
+		</div>
+	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="app.js"></script>
