--- a/public/dreams.html
+++ b/public/dreams.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<meta charset="UTF-8">
 	<title></title>
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
@@ -16,10 +17,12 @@
 	<div class="row">
 		<div class="col-12">
 			<div class="main-container">
+				<dl class="accordion">
+				</dl>
 		</div>
 	</div>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="dreams.js"></script>
 </body>
 </html>
