placeholder nav added

--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -13,12 +13,16 @@
 </head>
 <body>
 
+<nav>
+  <h1>Navigation</h1>
+</nav>
+
 <div class="row">
   <div class="col-12">
     <div class="main-container">
       <form class="new-dream-form" action="/some-server-endpoint" method="post">
 
-        <h1>Add New Dream</h1>
+        <h1 class="title">Add New Dream</h1>
 
         <fieldset name="new-dream-input">
 
