added min/max for hours slept

--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -38,7 +38,7 @@
 
           <div class="hours-slept-box">
               <p>Hours Slept: </p>
-              <input type="text" pattern='[0-9]*' name="hours-slept" id="hours-slept-input" title="Please enter a number" placeholder="8" autocomplete="off" required />
+              <input type="number" name="hours-slept" class="hours-slept-input" title="Please enter a number" placeholder="8" autocomplete="off" min="0" max="12" required />
           </div>
 
           <div class="dream-type-box">
