edited action address

--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -20,7 +20,7 @@
 <div class="row">
   <div class="col-12">
     <div class="main-container">
-      <form class="new-dream-form" action="/some-server-endpoint" method="post">
+      <form class="new-dream-form" action="/dreams/new" method="post">
 
         <h1 class="title">Add New Dream</h1>
 
