added tooltips for each dream type

--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -44,19 +44,19 @@
           <div class="dream-type-box">
             <p class="dream-type-header">Select Dream Type</p>
             <input type="radio" name="type-of-dream" id="normal-dream" value="0" checked>
-            <label for="normal-dream" class="dream-type-select">Normal Dream</label><br />
+            <label for="normal-dream" class="dream-type-select"><div class="normal-tooltip">Normal<span class="normal-tooltiptext">These are standard dreams where you have no idea you're dreaming until you wake up. You accept your dream reality as it is.</span></div></label><br />
 
             <input type="radio" name="type-of-dream" id="lucid-dream" value="1">
-            <label for="lucid-dream" class="dream-type-select">Lucid Dream</label><br />
+            <label for="lucid-dream" class="dream-type-select"><div class="lucid-tooltip">Lucid<span class="lucid-tooltiptext">A dream during which the dreamer is aware of dreaming. The dreamer may be able to exert some degree of control over the dream characters, narrative, and environment.</span></div></label><br />
 
             <input type="radio" name="type-of-dream" id="nightmare" value="2">
-            <label for="nightmare" class="dream-type-select">Nightmare</label><br />
+            <label for="nightmare" class="dream-type-select"><div class="nightmare-tooltip">Nightmare<span class="nightmare-tooltiptext">An unpleasant dream that can cause a strong emotional response from the mind, typically fear but also despair, anxiety and great sadness.</span></div></label><br />
 
             <input type="radio" name="type-of-dream" id="recurring-dream" value="3">
-            <label for="recurring-dream" class="dream-type-select">Recurring Dream</label><br />
+            <label for="recurring-dream" class="dream-type-select"><div class="recurring-tooltip">Recurring<span class="recurring-tooltiptext">A dream which is experienced repeatedly over a long period.</span></div></label><br />
 
             <input type="radio" name="type-of-dream" id="false-awakening" value="4">
-            <label for="false-awakening" class="dream-type-select">False Awakening</label>
+            <label for="false-awakening" class="dream-type-select"><div class="false-tooltip">Double<span class="false-tooltiptext">A false awakening is a vivid and convincing dream about awakening from sleep, while the dreamer in reality continues to sleep.</span></div></label>
           </div>
 
           <div class="dream-date-box">
