position and styling for tooltips

--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -56,7 +56,7 @@
             <label for="recurring-dream" class="dream-type-select"><div class="recurring-tooltip">Recurring<span class="recurring-tooltiptext">A dream which is experienced repeatedly over a long period.</span></div></label><br />
 
             <input type="radio" name="type-of-dream" id="false-awakening" value="4">
-            <label for="false-awakening" class="dream-type-select"><div class="false-tooltip">Double<span class="false-tooltiptext">A false awakening is a vivid and convincing dream about awakening from sleep, while the dreamer in reality continues to sleep.</span></div></label>
+            <label for="false-awakening" class="dream-type-select"><div class="double-tooltip">Double<span class="double-tooltiptext">Also known as a false awakening, a double dream is a vivid and convincing dream about awakening from sleep, while the dreamer in reality continues to sleep.</span></div></label>
           </div>
 
           <div class="dream-date-box">
