--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,9 +10,11 @@
   <title></title>
 </head>
 <body>
+  <canvas id="lineChart" width="400" height="400"></canvas>
 
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="dashboard.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+  <script type="text/javascript" src="dashboard.js"></script>
 </body>
 </html>
