--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,8 +10,21 @@
   <title></title>
 </head>
 <body>
-  <canvas id="lineChart" width="400" height="400"></canvas>
+  <div class="row">
+    <div class="col-6">
+      <div class="lineChartBox">
+        <canvas id="lineChart"></canvas>
+      </div>
+    </div>
+  </div>
 
+  <div class="row">
+    <div class="col-6">
+      <div class="doughnutChartBox">
+        <canvas id="doughnutChart"></canvas>
+      </div>
+    </div>
+  </div>
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
