--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -10,21 +10,30 @@
   <title></title>
 </head>
 <body>
+
+  <nav></nav>
+
+<div class="left-container">
   <div class="row">
-    <div class="col-12">
+
+    <div class="col-6">
       <div class="lineChartBox">
+        <h2 class="stat-title">Sleep Pattern</h2>
         <canvas id="lineChart"></canvas>
       </div>
     </div>
-  </div>
 
-  <div class="row">
     <div class="col-6">
       <div class="doughnutChartBox">
+        <h2 class="stat-title">Dream Types</h2>
         <canvas id="doughnutChart"></canvas>
       </div>
     </div>
+
   </div>
+</div>
+
+
 
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.4.0/Chart.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
