formatting for dashboard + user stats

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -13,13 +13,33 @@
 
   <nav></nav>
 
-<div class="left-container">
+
   <div class="row">
 
-    <div class="col-6">
+    <div class="col-12">
       <div class="lineChartBox">
         <h2 class="stat-title">Sleep Pattern</h2>
         <canvas id="lineChart"></canvas>
+      </div>
+    </div>
+
+  </div>
+
+  <div class="row">
+    <div class="col-6">
+      <div class="userStatsBox">
+
+        <div class="tracked-dreams"><p class="test">25</p></div>
+        <h2 class="tracked-dreams-footer">Dreams Recorded</h2>
+
+        <div class="lucid-dream-pct"><p class="test">5%</p></div>
+        <h2 class="lucid-dream-footer">Lucid Dreams</h2>
+
+        <div class="avg-sleep"><p class="test">8</p></div>
+        <h2 class="avg-sleep-footer">Average Hours of Sleep</h2>
+
+        <div class="total-hours"><p class="test">100</p></div>
+        <h2 class="total-hours-footer">Total Hours Tracked</h2>
       </div>
     </div>
 
@@ -31,7 +51,7 @@
     </div>
 
   </div>
-</div>
+
 
 
 
