--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -29,16 +29,16 @@
     <div class="col-6">
       <div class="userStatsBox">
 
-        <div class="tracked-dreams"><p class="test">25</p></div>
+        <div class="tracked-dreams"><p class="stat">25</p></div>
         <h2 class="tracked-dreams-footer">Dreams Recorded</h2>
 
-        <div class="lucid-dream-pct"><p class="test">5%</p></div>
+        <div class="lucid-dream-pct"><p class="stat">5%</p></div>
         <h2 class="lucid-dream-footer">Lucid Dreams</h2>
 
-        <div class="avg-sleep"><p class="test">8</p></div>
+        <div class="avg-sleep"><p class="stat">8</p></div>
         <h2 class="avg-sleep-footer">Average Hours of Sleep</h2>
 
-        <div class="total-hours"><p class="test">100</p></div>
+        <div class="total-hours"><p class="stat">100</p></div>
         <h2 class="total-hours-footer">Total Hours Tracked</h2>
       </div>
     </div>
