--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -28,18 +28,18 @@
   <div class="row">
     <div class="col-6">
       <div class="userStatsBox">
-
+        <h2>Statistics</h2>
         <div class="tracked-dreams"></div>
-        <h2 class="tracked-dreams-footer">Dreams Recorded</h2>
+        <h3 class="tracked-dreams-footer">Dreams Recorded</h3>
 
         <div class="lucid-dream-pct"></div>
-        <h2 class="lucid-dream-footer">Lucid Dreams</h2>
+        <h3 class="lucid-dream-footer">Lucid Dreams</h3>
 
         <div class="avg-sleep"></div>
-        <h2 class="avg-sleep-footer">Average Hours of Sleep</h2>
+        <h3 class="avg-sleep-footer">Average Hours of Sleep</h3>
 
         <div class="total-hours"></div>
-        <h2 class="total-hours-footer">Total Hours Tracked</h2>
+        <h3 class="total-hours-footer">Total Hours Tracked</h3>
       </div>
     </div>
 
