--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -60,20 +60,7 @@
 
           <div class="dream-date-box">
             <p class="dream-date-header">Date of Dream</p>
-            <select name="date-month" class='date-month' title="Please select a month" required>
-              <option value="0">01</option>
-              <option value="1">02</option>
-              <option value="2">03</option>
-              <option value="3">04</option>
-              <option value="4">05</option>
-              <option value="5">06</option>
-              <option value="6">07</option>
-              <option value="7">08</option>
-              <option value="8">09</option>
-              <option value="9">10</option>
-              <option value="10">11</option>
-              <option value="11">12</option>
-            </select> .
+            <input type="number" name="date-month" class='date-month' title="Please select a month" autocomplete="off" placeholder="01" min="1" max="12" required> .
 
             <input type="number" name="date-day" class="date-day" title="Please enter a day number" autocomplete="off" placeholder="01" min="1" max="31" required /> .
 
