--- a/public/index.html
+++ b/public/index.html
@@ -5,13 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
 	<link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="grid.css">
-	<link rel="stylesheet" type="text/css" href="main.css">
+	<link rel="stylesheet" type="text/css" href="index.css">
 	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
 
-	<nav>		
+	<nav>
 		<ul>
 			<a href="#"><li class="nav-left"><span class="nav-brand">DREAM WALKER</span></li></a>
 			<a href="#about"><li class="nav-left nav-hover">About</li></a>
@@ -45,7 +45,7 @@
 		<!--Parallax Star Background-->
 		<div id='stars'></div>
 		<div id='stars2'></div>
-		<div id='stars3'></div> 
+		<div id='stars3'></div>
 		<!--Parallax Star Background-->
 		<div id="home">
 			<div class="row">
@@ -54,7 +54,7 @@
 					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam eget ipsum sed eros congue placerat. Curabitur lobortis, magna non rhoncus aliquam, sapien eros lobortis justo, eget auctor nibh est non erat.</p>
 				</div>
 			</div>
-		</div>		
+		</div>
 	</header>
 
 	<main>
@@ -115,13 +115,13 @@
 					</div>
 				</div>
 			</div>
-		</section>	
+		</section>
 
 
 	</main>
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="app.js"></script>
+<script type="text/javascript" src="index.js"></script>
 </body>
 </html>
