--- a/public/dreams.html
+++ b/public/dreams.html
@@ -12,8 +12,13 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 <body>
+
 	<nav>
-		<h1>Navigation</h1>
+		<ul>
+			<a href="#"><li>Dashboard</li></a>
+			<a href="#"><li>Dreams</li></a>
+			<a href="#"><li>Add New Dream</li></a>
+		</ul>
 	</nav>
 
 	<div class="row">
