added nav to dashboard.html

--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -11,7 +11,13 @@
 </head>
 <body>
 
-  <nav></nav>
+  <nav>
+    <ul>
+      <a href="#"><li>Dashboard</li></a>
+      <a href="#"><li>Dreams</li></a>
+      <a href="#"><li>Add New Dream</li></a>
+    </ul>
+  </nav>
 
   <div class="row">
     <div class="col-6">
