--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -12,9 +12,13 @@
 </head>
 <body>
 
-<nav>
-  <h1>Navigation</h1>
-</nav>
+  <nav>
+    <ul>
+      <a href="#"><li>Dashboard</li></a>
+      <a href="#"><li>Dreams</li></a>
+      <a href="#"><li>Add New Dream</li></a>
+    </ul>
+  </nav>
 
 <div class="row">
   <div class="col-12">
