added responsive nav to all pages

--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -18,6 +18,7 @@
       <a href="#"><li>Dreams</li></a>
       <a href="#"><li>Add New Dream</li></a>
     </ul>
+    <div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
   </nav>
 
 <div class="row">
