--- a/public/dashboard.html
+++ b/public/dashboard.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" type="text/css" href="dashboard.css">
   <link rel="stylesheet" type="text/css" href="grid.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <title></title>
 </head>
 <body>
@@ -17,6 +18,7 @@
       <a href="#"><li>Dreams</li></a>
       <a href="#"><li>Add New Dream</li></a>
     </ul>
+    <div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
   </nav>
 
   <div class="row">
