--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -6,6 +6,7 @@
   <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css">
   <link rel="stylesheet" type="text/css" href="new-dream.css">
   <link rel="stylesheet" type="text/css" href="grid.css">
+  <link rel="stylesheet" type="text/css" href="animate.css">
   <link href="https://fonts.googleapis.com/css?family=Raleway" rel="stylesheet">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -14,9 +15,9 @@
 
   <nav>
     <ul>
-      <a href="#"><li>Dashboard</li></a>
-      <a href="#"><li>Dreams</li></a>
-      <a href="#"><li>Add New Dream</li></a>
+      <a href="dashboard.html"><li>Dashboard</li></a>
+      <a href="dreams.html"><li>Dreams</li></a>
+      <a href="new-dream.html"><li>Add New Dream</li></a>
     </ul>
     <div class="handle"><span class="handle-menu">DREAM WALKER</span><i class="fa fa-bars fa-2x" aria-hidden="true"></i></div>
   </nav>
@@ -24,7 +25,7 @@
 <div class="row">
   <div class="col-12">
     <div class="main-container">
-      <form class="new-dream-form" action="/dreams/new" method="post">
+      <form class="new-dream-form animated fadeIn" action="/dreams/new" method="post">
 
         <h1 class="title">Add New Dream</h1>
 
