--- a/public/dream-edit.html
+++ b/public/dream-edit.html
@@ -14,9 +14,9 @@
 
   <nav>
     <ul>
-      <a href="#"><li>Dashboard</li></a>
-      <a href="#"><li>Dreams</li></a>
-      <a href="#"><li>Add New Dream</li></a>
+      <a href="dashboard.html"><li>Dashboard</li></a>
+      <a href="dreams.html"><li>Dreams</li></a>
+      <a href="new-dream.html"><li>Add New Dream</li></a>
     </ul>
   </nav>
 
