--- a/public/new-dream.html
+++ b/public/new-dream.html
@@ -27,7 +27,7 @@
     <div class="main-container">
       <form class="new-dream-form animated fadeIn" action="/dreams/new" method="post">
 
-        <h1 class="title">Add New Dream</h1>
+        <h1 class="title">New Dream</h1>
 
         <fieldset name="new-dream-input">
 
